fixed project tech cut off

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -274,7 +274,7 @@ main {
   justify-content: center;
   font-size: 3rem;
   margin-bottom: 20px;
-  height: 5rem;
+  // height: 5rem;
 
   > * {
     margin: 10px;
